fixed contrast issues

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,7 +19,7 @@ p {
 
 label {
     font-size: 13px;
-    color: #8193a1;
+    color: #636d7d;
 }
 
 .container {
