--- a/src/components/Utils/Utils.module.css
+++ b/src/components/Utils/Utils.module.css
@@ -114,9 +114,9 @@
 
 .addButtonStyle {
     composes: buttonStyle;
-    background-color: #7fba84;
+    background-color: #7ca67b;
     color: white;
-    border: 1px solid #7fba84;
+    border: 1px solid #7ca67b;
 }
 
 @media only screen and (max-width: 800px) {
