--- a/src/components/Utils/shared-styles/TableStyles.module.css
+++ b/src/components/Utils/shared-styles/TableStyles.module.css
@@ -84,9 +84,6 @@
     padding: 20px;
     border-radius: 7px;
     box-shadow: 2px 2px 40px -20px lightgray;
-}
-
-.listContainer {
     margin-bottom: 50px;
 }
 
